# image-service

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-signed.mjs  prepare-release.mjs  print-apple-secrets.mjs  print-updater-secrets.mjs  release.mjs  tauri.mjs
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/composables/: useAppUpdater.ts  useImageConverter.ts
src/types/: converter.ts
