[package]
name = "image_service"
version = "1.0.3"
description = "Offline image converter and optimizer"
authors = ["Image Service"]
edition = "2021"
rust-version = "1.77"
default-run = "image_service"

[lib]
name = "image_service_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "image_service"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
webp = "0.3"
